--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,7 +1,11 @@
+# If you tag your "include_role" and there is more than one, you can skip specific roles with:
+# $ ANSIBLE_SKIP_TAGS="geerlingguy.nginx,geerlingguy.php" molecule converge
 ---
 - name: Converge
   hosts: all
   tasks:
-    - name: "Include ansible-role-nvidia"
+    - name: "Include the role you are developing here"
       include_role:
-        name: "ansible-role-nvidia"
+        apply:
+          become: true
+        name: ${CWD}"
